# openclaw-mini

./: .env.example  .gitignore  DEMO.md  PLAN.md  PRESENTATION_PLAN.md  PRESENTATION_SCRIPT.md  README.md  WORKFLOW.md  demo.cast  pyproject.toml
docs/: AGENT_LOOP.md  HEARTBEAT.md
scripts/: debug_tools.py  demo_components.py  mini-openclaw.py
src/openclaw/: __init__.py  config.py  main.py
src/openclaw/agent/: loop.py  router.py  soul.py
src/openclaw/channels/: base.py  discord_ch.py  http_api.py  repl.py  slack_ch.py  telegram.py
src/openclaw/heartbeat/: scheduler.py
src/openclaw/permissions/: manager.py
src/openclaw/queue/: command_queue.py
src/openclaw/session/: compaction.py  context_builder.py  store.py
src/openclaw/tools/: filesystem.py  gitlab_mr.py  gitlab_pipeline.py  jira_ticket.py  list_dir.py  memory_tools.py  registry.py  shell.py  web.py
tests/: test_agent_loop.py  test_command_queue.py  test_compaction.py  test_config.py  test_heartbeat.py  test_http_channel.py  test_memory.py  test_permissions.py  test_router.py  test_session_store.py  test_soul.py  test_tools.py
